--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,18 @@
 spring:
+  profiles:
+    include:
+      - local
 
   datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: ${CLEARDB_DATABASE_URL}
+#    username: ${CLEARDB_DATABASE_USERNAME}
+#    password: ${CLEARDB_DATABASE_PASSWORD}
+
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${CLEARDB_DATABASE_URL}
-    username: ${CLEARDB_DATABASE_USERNAME}
-    password: ${CLEARDB_DATABASE_PASSWORD}
+    url: jdbc:mysql://localhost:3306/KISSCO
+    password: dnjswhdtj1!
+    username: root
 
 
 
