--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,8 @@
+jar {
+    baseName = 'bordersite'
+    version ='0.0.1'
+}
+
 plugins {
     id 'org.springframework.boot' version '2.7.3'
     id 'io.spring.dependency-management' version '1.0.13.RELEASE'
