--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,5 @@ spring:
           format_sql: true
           default_batch_fetch_size: 500
       database: mysql
+  server:
+    port=${port:8080}:
